--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,12 @@
     <link rel="icon" href="/images/favicon.ico" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <link rel="stylesheet" href="/styles/styles.css">
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+    name="description"
+    content="Web site created using create-react-app"
     />
-    <title>My Pet</title>
+    <link rel="stylesheet" href="/styles/styles.css">
+    <title>Route My Pet</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
